--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,10 @@ description = "MCP server for Blender"
 readme = "README.md"
 authors = [{ name = "Andrew Wason", email = "rectalogic@rectalogic.com" }]
 requires-python = ">=3.11"
-dependencies = [
-    "anyio>=4.9.0",
-    "click>=8.1.8",
-    "mcp>=1.5.0",
-]
+dependencies = ["anyio>=4.9.0", "click>=8.1.8", "mcp>=1.5.0"]
+
+[project.scripts]
+blender-mcp = "blender_mcp.server:main"
 
 [build-system]
 requires = ["hatchling"]
